[gd_scene load_steps=6 format=3 uid="uid://dybwitfeuo8bc"]

[ext_resource type="Script" uid="uid://kvobtothru3u" path="res://Scripts/round_transition.gd" id="1_jgv2l"]
[ext_resource type="LabelSettings" uid="uid://cv30q41x772qb" path="res://Assets/RoundTransition.tres" id="1_suuut"]
[ext_resource type="Theme" uid="uid://cpwk5by5vj381" path="res://Theme.tres" id="3_nswyh"]

[sub_resource type="LabelSettings" id="LabelSettings_jgv2l"]
font_size = 48
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nswyh"]
font_size = 48
font_color = Color(0, 0, 0, 1)

[node name="RoundTransition" type="CanvasLayer"]
script = ExtResource("1_jgv2l")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.927924, 0.972314, 0.433061, 1)

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -231.5
offset_top = 10.0
offset_right = 231.5
offset_bottom = 106.0
grow_horizontal = 2
text = "Round Complete"
label_settings = ExtResource("1_suuut")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MidBar" type="HBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyContainer" type="VBoxContainer" parent="MidBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MoneyLabel" type="Label" parent="MidBar/MoneyContainer"]
layout_mode = 2
text = "$$$    Earned"
label_settings = ExtResource("1_suuut")
horizontal_alignment = 1

[node name="MoneyValue" type="Label" parent="MidBar/MoneyContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("1_suuut")
horizontal_alignment = 1

[node name="ScoreContainer" type="VBoxContainer" parent="MidBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ScoreLabel" type="Label" parent="MidBar/ScoreContainer"]
layout_mode = 2
text = "Score"
label_settings = ExtResource("1_suuut")
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="MidBar/ScoreContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("1_suuut")
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -142.5
offset_top = -120.0
offset_right = 142.5
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0

[node name="ContinueButton" type="Button" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_nswyh")
text = "Continue       To       Shop"
icon_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TotalScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Total: "
label_settings = SubResource("LabelSettings_jgv2l")

[node name="TotalScoreValue" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_nswyh")
